game third commit

--- a/index.html
+++ b/index.html
@@ -16,17 +16,11 @@
         <button id="menu">Menu</button> 
         <button id="play-again">Play Again</button>
       </div>  
-      <div class="wrapper"> 
-        <div id="instructions"> 
-          <div>
-           move with <span class="key">arrows</span> or <span class="key">wasd</span>
-          </div>  
-          <div>
-            shoot with <span class="key">space</span>  
-          </div>
-          </div> 
-        <div id="score"></div> 
-      </div>
+
+      <div class="info">
+      <div class="links_class">Link to my vk: <a href = "https://vk.com/mr_lapka" target="_blank" class="a_class_vk">mr_lapka</a></div>
+      <div class="links_class">Link to my GitHub: <a href="https://github.com/MrLaPka" target="_blank" class="a_class_git">MrLaPka</a></div>
+    </div>
     <script src= "dist\app.js" ></script>
 </body>
 </html>
