--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Monster Kill</h1>
     <div id="game-over-overlay">
       </div> 
       <div id="game-over">  
