--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Monster Kill</title>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script type="text/javascript">$(window).on('load', function () {
+      let $preloader = $('#p_prldr'),
+          $svg_anm   = $preloader.find('.svg_anm');
+      $svg_anm.fadeOut();
+      $preloader.delay(500).fadeOut('slow');
+  });</script>
 </head>
 <body>
+  <div id="p_prldr"><div class="contpre"><span class="svg_anm"></span><br>Wait<br><small>loading in progress</small></div></div>
+  <h1>Monster Kill</h1>
     <div id="game-over-overlay">
       </div> 
       <div id="game-over">  
