feat: update gameplay and score, add alpha-version

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div id="p_prldr"><div class="contpre"><span class="svg_anm"></span><br>Wait<br><small>loading in progress</small></div></div>
   <h1>Monster Kill</h1>
-      <div class="info">
+      <div id = "info">
       <div class="links_class">Link to my vk: <a href = "https://vk.com/mr_lapka" target="_blank" class="a_class_vk">mr_lapka</a></div>
       <div class="links_class">Link to my GitHub: <a href="https://github.com/MrLaPka" target="_blank" class="a_class_git">MrLaPka</a></div>
     </div>
